@@ -69,7 +69,7 @@ Enforce flags when exporting to the XML format.
 Flags may be given as numeric values or as a comma-separated list of flag names
 that are passed to \fIhwloc_topology_export_xml()\fR.
 Those names may be substrings of actual flag names as long as a single one matches.
-A value of \fB1\fR (or \fBv1\fR) reverts to the format of hwloc v1.x.
+A value of \fB2\fR (or \fBv2\fR) reverts to the format of hwloc v2.x.
 The default is \fB0\fR (or \fBnone\fR).
 .TP
 \fB\-\-export\-synthetic\-flags\fR <flags>
